# kg-memory-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: hooks.md
kg_memory_mcp/: __init__.py  __main__.py  chat_db.py  cli.py  db.py  embedding.py  export.py  migrate.py  psql.py  quality.py  schema.sql  search.py  server.py
kg_memory_mcp/collector/: __init__.py  claude_code.py  codex.py  gemini.py  opencode.py
kg_memory_mcp/hooks/: __init__.py  _common.py  claude_code.py  codex.py  gemini.py  opencode.py  opencode.ts
kg_memory_mcp/migrations/: 001_baseline.sql  runner.py
tests/: conftest.py  test_chat_integration.py  test_collector.py  test_db_integration.py  test_quality.py  test_search_integration.py
