[project]
name = "kg-memory-mcp"
version = "0.1.0"
description = "Knowledge graph memory + conversation archival MCP server (PostgreSQL + pgvector)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "memory", "knowledge-graph", "postgresql", "pgvector"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.6",
    "numpy>=1.26.0",
    "click>=8.0.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/liangquanzhou/kg-memory-mcp"
Repository = "https://github.com/liangquanzhou/kg-memory-mcp"
Issues = "https://github.com/liangquanzhou/kg-memory-mcp/issues"

[project.scripts]
kg-memory-mcp = "kg_memory_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kg_memory_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
    "CLAUDE.md",
    ".github/",
    "tests/",
    "docs/",
    "tmp/",
    "uv.lock",
    ".env.example",
    ".ruff_cache/",
    ".pytest_cache/",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
